tests/ui/rfc-2632-const-trait-impl/const_derives/derive-const-gate.stderr
error[E0658]: use of unstable library feature 'derive_const'
  --> $DIR/derive-const-gate.rs:1:3
   |
LL | #[derive_const(Default)]
   |   ^^^^^^^^^^^^
   |
   = help: add `#![feature(derive_const)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
